Expand benchmarks and improve integration tests